# ai

./: .env.example  .flake8  .gitignore  .sourcery.yaml  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SCHEDULE_UPDATED.md  PROJECT_STRUCTURE.md  README.md  batch_info_openai.json  main.py  pyproject.toml  requirements-dev.txt  requirements-scripts.txt  requirements.txt  requirements_training.txt  test_articles.txt
.github/workflows/: ci.yml
app/api/: __init__.py  routes.py  schemas.py
app/database/: __init__.py  connection.py  models.py
app/models/: __init__.py  stance_classifier.py
app/services/: __init__.py  stance_service.py
data/batch_results/balanced_splits/: test.csv  val.csv
data/docs/: AUTO_LABELING_GUIDE.md  BATCH_LABELING_GUIDE.md  DATA_PREPARATION_GUIDE.md  MANUAL_REVIEW_GUIDE.md  NEWS_DATA_COLLECTION_GUIDE.md  OPENAI_BATCH_GUIDE.md  REVIEW_CHECKLIST.md  TEAM_ASSIGNMENT_TEMPLATE.md
data/review/: disagreements_for_review.json
data/review_samples/: practice_sample_50.csv  practice_sample_50.json  priority1_all.csv  priority1_all.json
notebooks/: stance_training.ipynb  stance_training_improved.ipynb
saved_models/: metadata_20251126_060326.json
scripts/: README.md  analyze_batch_results.py  analyze_server_articles.py  auto_labeling.py  balance_and_split_dataset.py  batch_labeling_openai.py  check_batch_errors.py  check_confusion_matrix.py  collect_news.py  create_claude_batch.py  deploy_to_spaces.py  extract_disagreements.py  merge_labels.py  predict_stance.py  prepare_clear_dataset.py  prepare_review_samples.py  review_labels.py  split_train_val_test.py  submit_claude_batch.py  train_kobert_improved.py  train_stance_kobert.py  upload_to_huggingface.py  validate_data.py
scripts/batch_api/: improved_prompt_v2.md
scripts/labeling/: batch_labeling.py  merge_labels.py
scripts/review/: extract_disagreements.py  prepare_samples.py
spaces/: Dockerfile  README.md  app.py  requirements.txt
(+12 files in other folders)
